--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,369 @@
-.App {
-  text-align: center;
+body
+{
+  background-color:#d3dee575;
+  font-family: 'Roboto', sans-serif;
+  font-weight:400;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Header */
+.container
+{
+  display:flex;
+  height:4rem;
+  background-color:white;
+  justify-content: space-between;
+  max-width:initial;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#search-field
+{
+  width:20rem;
+  margin-left:2rem;
+  margin-top:1rem
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.profile
+{
+  margin-right:1rem;
+  display:flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+/* Dashboard  heading & button */
+.dashboard
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  margin-top:1rem;  
+  gap:5rem ; 
+  flex-wrap:wrap
+}
+.dashboard > button
+{
+  background-Color:#4e73df;
+  margin-right: 3rem;
+  height:2rem;
+  line-height:0.5rem;
+  padding-left: 2px;
+  width:fit-content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dashboard > p
+{
+  margin-left:1.8rem;
 }
+
+.fa-download
+{
+  margin-right: 5px;
+  margin-left: 5px;
+  color:rgb(178, 186, 190) !important;
+}
+
+/* Remainder Section */
+.remainder
+{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top:1rem;
+  gap:2rem;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+}
+
+.remainder-content
+{
+  display: flex;
+  padding-top:15px;
+  padding-left:15px;
+  border-left: 4px solid;
+  background-color: white;
+  border-radius:7px;
+  width:300px;
+}
+
+/* Remainder Section Icons */
+.fa-calendar,.fa-comments,.fa-dollar-sign,.fa-clipboard-list
+{
+  font-size:3rem;
+  color:grey;
+  margin-left: 3rem;
+  margin-top: 0.5rem;
+  margin-right: 1rem;
+  opacity:0.5;
+}
+
+.fa-clipboard-list
+{
+  margin-right:5rem !important;
+}
+
+.fa-dollar-sign
+{
+  margin-left: 5rem;
+}
+
+.bg-info
+{
+  background-color: #36b9cc !important;
+}
+
+#pbar
+{
+  width:9rem;
+  margin-top:2.8rem;
+  margin-left:"0.5rem";
+  height:"0.64rem";
+}
+
+
+/* Chart section */
+.chart
+{
+  justify-content: space-evenly;
+  gap:1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.dchart
+{
+  margin-top:2rem;
+  width:400px;
+  
+}
+
+.dcicon 
+{
+  margin-left:12.5rem;
+}
+.linechart
+{
+  margin-left:1.2rem;
+  margin-top:2rem;
+  width:900px;
+}
+
+.licon
+{
+  cursor:pointer;
+  margin-left:42.5rem;
+}
+
+.project-illustration
+{
+  display: flex;
+  justify-content: space-evenly;
+  gap:1rem;
+  flex-wrap: wrap;
+  margin-top: -2rem;
+}
+
+.container-head
+{
+background-color:rgba(0,0,0,.03);
+height:2.5rem;
+padding:0.5rem;
+margin-bottom:1rem;
+border-width:0px;
+border-bottom-width:1px;
+border-color:rgb(183 195 175);
+border-style:solid
+}
+
+
+/* Project Status Component */
+.projects
+{
+  width:40rem;
+  height:26rem;
+  background-color: white;
+  border-radius:5px;
+  margin:2rem 0 3rem 1rem;
+  border: 1px solid rgb(183 195 175);
+}
+.name-percentage
+{
+  display: flex;
+  justify-content: space-between;
+}
+.individual-status
+{
+  margin-bottom:1rem;
+}
+.bg-account-setup
+{
+  background-color:#1cc88a !important; 
+  /* width:100%; */
+}
+
+.bg-payout-details
+{
+  background-color:#36b9cc !important; 
+  /* width:100%; */
+}
+
+.bg-server-migration
+{
+  background-color:#e74a3b !important;
+  /* width:100%;  */
+}
+
+.bg-sales-tracking
+{
+  background-color:#f6c23e !important; 
+  /* width:100%; */
+}
+
+.bg-customer-database
+{
+  background-color:#4e73df !important; 
+  /* width:100%; */
+}
+
+/* Illustrations */
+.illustration > img
+{
+  width:15rem;
+  height:14rem;
+  margin-left: 8rem;
+}
+
+.illustration 
+{
+  width:39.2rem;
+  height:28rem;
+  background-color: white;
+  border-radius:5px;
+  margin:1.5rem;
+  border: 1px solid rgb(183 195 175);
+  
+}
+
+.color-dev
+{
+  display: flex;
+  justify-content: space-evenly;
+  gap:1rem;
+  flex-wrap: wrap;
+}
+
+/* Color pallet */
+.color-container
+{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  flex-wrap: wrap;
+  max-width:40rem;
+  gap: 1rem;
+  border-radius:5px;
+  margin-bottom:2rem;
+}
+.colors
+{
+  width:19rem;
+  height:5rem;
+  margin-left: 1.1rem;
+  border-radius: 5px;
+}
+
+
+/* Development */
+.development
+{
+  width:39.2rem;
+  height:15rem;
+  background-color: white;
+  border-radius:5px;
+  margin:1.5rem; 
+  border: 1px solid rgb(183 195 175);
+
+}
+
+
+/* Footer */
+.footer
+{
+  background-color: white;
+  width:100%;
+  height: 5rem;
+  text-align: center;
+  padding: 1rem;
+}
+
+/* Float Button */
+#float-button
+{
+  position:sticky;
+  top:35rem;
+  left:75rem;
+}
+
+ @media (max-width:750px)
+{
+  .chart
+  {
+    display: grid;
+    grid-template-columns:1fr;
+  }
+  .linechart,.dchart
+  {
+    width: 675px;
+    margin:0.5rem auto;
+  }
+  .projects
+  {
+    margin:auto;
+    width: 675px;
+  }
+  .color-container
+  {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin:1rem auto;
+  }
+
+  .colors
+  {
+    width:630px;
+    margin-left: -0.1rem;
+  }
+  .dashboard > p
+  {
+    margin-left: 3rem;
+  }
+  .dashboard > button
+  {
+    margin-right:2rem;
+  }
+
+  .licon
+  {
+    margin-left: 28.5rem;
+  }
+  .dcicon
+  {
+    margin-left: 29.5rem;
+  }
+  #pbar
+  {
+    width:8.5rem;
+    margin-top:2.8rem;
+  }
+
+
+
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
